@@ -2299,6 +2299,12 @@ If FORCE is non-nil, the .newsrc file is read."
 
 (defun gnus-clean-old-newsrc (&optional force)
   (when gnus-newsrc-file-version
+    ;; Remove totally bogus `unexists' entries.  The name is
+    ;; `unexist'.
+    (let ((exist (assoc 'unexists (gnus-info-marks info))))
+      (when exist
+	(gnus-info-set-marks
+	 info (delete exist (gnus-info-marks info)))))
     (when (or force
 	      (< (gnus-continuum-version gnus-newsrc-file-version)
 		 (gnus-continuum-version "Ma Gnus v0.03")))
