@@ -1,5 +1,8 @@
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-start.el (gnus-clean-old-newsrc): Remove totally bogus
+	`unexists' entries.
+
 	* nnimap.el (nnimap-update-info): None of the articles below the active
 	low-water mark exist.
 
